# saboru-relm

./: Cargo.toml
src/: main.rs
src/api/: mod.rs
src/components/: message_window.rs  mod.rs  sidebar.rs
src/components/message_window/: message_object.rs  message_row.rs  message_row.ui
src/components/sidebar/: row.rs
src/components/sidebar_item/: data_row.rs  mod.rs  sidebar_row.ui
src/components/types/: channel.rs  mod.rs
src/css/: style.css  style.css.map  style.scss
